--- a/portfolio.css
+++ b/portfolio.css
@@ -15,25 +15,127 @@ body {
     box-sizing: border-box;
 }
 
-#header {
+.header {
     height: calc(100vh - 260px);
     background-color: rgb(29, 79, 158);
     color: white;
     margin: 0;
 }
 
+/* #stars {
+    position: absolute;
+    animation: space 5s linear infinite;
+    height: calc(100vh - 260px);
+    width: 100%;
+    z-index: 100;
+    background-image:
+    radial-gradient(
+      1px 1px at 75px 125px, 
+      white, 
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+      1px 1px at 100px 75px, 
+      white, 
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+      1.5px 1.5px at 199px 100px, 
+      yellow, 
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+      2px 2px at 20px 50px, 
+      red, 
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+      2.5px 2.5px at 100px 5px, 
+      green, 
+      rgba(255, 255, 255, 0)
+    ),
+
+    radial-gradient(
+      2.5px 2.5px at 40px 300px, 
+      white, 
+      rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        1px 1px at 52px 200px, 
+        white, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        2.5px 2.5px at 150px 50px, 
+        orange, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        2.5px 2.5px at 245px 50px, 
+        white, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        2px 2px at 144px 5px, 
+        white, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        4px 4px at 300px 20px, 
+        green, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        4px 4px at 300px 340px, 
+        green, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        4px 4px at 300px 20px, 
+        green, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        5px 5px at 244px 259px, 
+        white, 
+        rgba(255, 255, 255, 0)
+    ),
+    radial-gradient(
+        1.5px 1.5px at 5px 5px, 
+        white, 
+        rgba(255, 255, 255, 0)
+    );
+    overflow: hidden;
+}
+
+@keyframes space {
+    40% {
+
+    }
+    50% {
+    }
+    60% {
+    }
+    100% {
+      transform: translateY(-300px);
+    }
+  } */
+
 h1, h2, h3, h4 {
-    margin: 1rem unset;
+    margin: unset;
     font-weight: normal;
 }
 
 h1 {
     font-size: 3rem;
     color: rgb(29, 79, 158);
+    margin: 16px auto;
 }
 
 p {
     text-align: left;
+    margin-top: 12px; 
+    margin-bottom: 12px;
 }
 
 .text-white {
@@ -49,6 +151,10 @@ p {
     width: 90%;
     margin: 0 auto;
     text-align: center;
+}
+
+.divider {
+    width: 90%;
 }
 
 .project-container {
@@ -78,6 +184,10 @@ p {
     color: rgb(211, 50, 50);
 }
 
+.experience-container {
+    text-align: left;
+}
+
 .form {
     padding: 8px;
     margin-bottom: 1rem;
@@ -99,10 +209,11 @@ p {
 
 .form textarea {
     height: 3rem;
+    font-family: 'Lato', sans-serif;
 }
 
 .submit-button {
-    
+    text-align: center;  
 }
 
 #footer {
@@ -115,5 +226,8 @@ p {
 @media (min-width: 500px) {
     .section-content {
         width: 70%;
+    }
+    .divider {
+        display: none;
     }
 }
