--- a/portfolio.css
+++ b/portfolio.css
@@ -33,7 +33,7 @@ body {
 }
 
 #particles-js {
-    background-color: #1d4f9e;
+    background-color: #0d2955;
     position: absolute;
     height: calc(100vh - 60px);
     width: 100%;
@@ -55,105 +55,6 @@ canvas {
     margin-right: 0;
     z-index: 200;
 }
-
-/* #stars {
-    position: absolute;
-    animation: space 5s linear infinite;
-    height: calc(100vh - 260px);
-    width: 100%;
-    z-index: 100;
-    background-image:
-    radial-gradient(
-      1px 1px at 75px 125px, 
-      white, 
-      rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-      1px 1px at 100px 75px, 
-      white, 
-      rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-      1.5px 1.5px at 199px 100px, 
-      yellow, 
-      rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-      2px 2px at 20px 50px, 
-      red, 
-      rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-      2.5px 2.5px at 100px 5px, 
-      green, 
-      rgba(255, 255, 255, 0)
-    ),
-
-    radial-gradient(
-      2.5px 2.5px at 40px 300px, 
-      white, 
-      rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        1px 1px at 52px 200px, 
-        white, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        2.5px 2.5px at 150px 50px, 
-        orange, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        2.5px 2.5px at 245px 50px, 
-        white, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        2px 2px at 144px 5px, 
-        white, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        4px 4px at 300px 20px, 
-        green, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        4px 4px at 300px 340px, 
-        green, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        4px 4px at 300px 20px, 
-        green, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        5px 5px at 244px 259px, 
-        white, 
-        rgba(255, 255, 255, 0)
-    ),
-    radial-gradient(
-        1.5px 1.5px at 5px 5px, 
-        white, 
-        rgba(255, 255, 255, 0)
-    );
-    overflow: hidden;
-}
-
-@keyframes space {
-    40% {
-
-    }
-    50% {
-    }
-    60% {
-    }
-    100% {
-      transform: translateY(-300px);
-    }
-  } */
 
 h1, h2, h3, h4 {
     margin: unset;
@@ -260,7 +161,7 @@ ul {
 
 #footer {
     height: calc(100vh - 520px);
-    background-color: rgb(29, 79, 158);
+    background-color: #0d2955;
     color: white;
     margin: 0;
 }
