--- a/portfolio.css
+++ b/portfolio.css
@@ -8,6 +8,7 @@ body {
   padding: 0;
   /* background-color: #f9f8f3; */
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -101,6 +102,7 @@ ul {
 }
 
 section {
+  padding-top: 3rem;
   background-color: #f9f8f3;
 }
 
