--- a/header.css
+++ b/header.css
@@ -8,19 +8,88 @@
 }
 
 .nav-items {
-  all: unset;
-  display: flex;
-  height: 100%;
-  align-items: center;
-  justify-content: space-evenly;
+  height: 1px;
+  overflow: hidden;
+  transition: height 400ms;
+  padding: 3rem 0 0 0;
+  background-color: rgba(13, 40, 84, 0.75);
+  display: block;
+  margin: 0;
+  font-size: 1.1rem;
+  width: 100%;
+  text-align: center;
 }
 
 .nav-item {
   all: unset;
+  display: block;
 }
 
 .nav-item a,
 .nav-item a:visited {
   text-decoration: none;
   color: white;
+}
+
+.nav-item a:hover {
+  color: rgb(180, 180, 180);
+}
+
+.change {
+  height: 10rem;
+}
+
+.sandwich {
+  position: fixed;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  padding: 4px 8px;
+}
+
+.sandwich div {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Rotate first bar */
+.open .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+/* Fade out the second bar */
+.open .bar2 {
+  opacity: 0;
+}
+
+/* Rotate last bar */
+.open .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
+}
+
+@media (min-width: 601px) {
+  .nav-items {
+    all: unset;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .sandwich {
+    display: none;
+  }
 }
