--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@ body {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Raleway", sans-serif;
   box-sizing: border-box;
 }
 
@@ -64,6 +64,7 @@ h2,
 h3,
 h4 {
   margin: unset;
+  font-family: "Architects Daughter", cursive;
   font-weight: normal;
 }
 
@@ -75,7 +76,7 @@ h1 {
 
 h2 {
   color: rgb(29, 79, 158);
-  font-size: 1.25rem;
+  font-size: 2rem;
 }
 
 p {
@@ -123,17 +124,18 @@ section {
 }
 
 .project-container {
-  display: flex;
+  /* display: flex; */
   align-items: top;
-  margin: 8px 0;
+  margin: 16px auto;
   padding: 4px;
   border-radius: 4px;
   border: 1px #ccc solid;
   border-style: groove;
+  max-width: 600px;
 }
 
 .project-container > img {
-  object-fit: fill;
+  object-fit: contain;
   width: 60px;
   height: 60px;
 }
@@ -144,31 +146,39 @@ section {
 }
 
 .image-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: none;
+  margin: 0 auto;
+  max-width: 500px;
+  text-align: center;
+}
+
+.link-container {
+  margin: 0 auto;
+  text-align: center;
 }
 
 .link-button {
-  text-decoration: underline;
-  /* border: 1px solid #0d2955;
-    border-radius: 4px;
-    padding: 8px; */
-  color: rgb(29, 79, 158);
+  text-decoration: none;
+  font-family: "Architects Daughter", cursive;
+  border: 1px solid #0d2955;
+  border-radius: 4px;
+  padding: 8px;
+  color: white;
+  background-color: rgba(29, 79, 158, 0.7);
   margin-right: 16px;
   cursor: pointer;
 }
 
-.link-button:hover,
-.link-button:active {
-  color: rgb(11, 37, 79);
+.link-button:hover {
+  background-color: rgba(29, 79, 158, 0.8);
 }
 
-.link-button:visited {
-  /* background-color: #d0cdbb; */
-  color: rgb(158, 29, 29);
+.link-button:active {
+  background-color: rgba(29, 79, 158, 0.9);
 }
+
+/* .link-button:visited {
+  color: rgb(158, 29, 29);
+} */
 
 .experience-container {
   text-align: left;
