--- a/header.css
+++ b/header.css
@@ -85,6 +85,7 @@
 @media (min-width: 601px) {
   .nav-items {
     all: unset;
+    background-color: rgba(13, 40, 84, 0.75);
     display: flex;
     height: 100%;
     align-items: center;
