--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -6,7 +6,6 @@ html,
 body {
   margin: 0;
   padding: 0;
-  /* background-color: #f9f8f3; */
   font-size: 1rem;
   scroll-behavior: smooth;
 }
@@ -59,14 +58,14 @@ canvas {
   z-index: 200;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4 {
   margin: unset;
   font-family: "Architects Daughter", cursive;
   font-weight: normal;
-}
+} */
 
 h1 {
   font-size: 3rem;
@@ -79,6 +78,10 @@ h2 {
   font-size: 2rem;
 }
 
+h3 {
+  text-align: left;
+}
+
 p {
   text-align: left;
   margin-top: 12px;
@@ -87,6 +90,13 @@ p {
 
 ul {
   text-align: left;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  padding: 4px 0;
 }
 
 .text-white {
@@ -103,85 +113,18 @@ ul {
 }
 
 section {
-  padding-top: 3rem;
   background-color: #f9f8f3;
+  margin: 0 auto;
+  padding: 16px;
 }
 
 .section-content {
   width: 90%;
   margin: 0 auto;
+  padding-top: 32px; 
   text-align: center;
 }
 
-.divider {
-  width: 100%;
-  background-color: #f9f8f3;
-}
-
-.divider hr {
-  width: 90%;
-  margin: 0 auto;
-}
-
-.project-container {
-  align-items: top;
-  margin: 16px auto;
-  padding: 4px;
-  border-radius: 4px;
-  border: 1px #ccc solid;
-  border-style: groove;
-  max-width: 600px;
-}
-
-.project-container > img {
-  object-fit: contain;
-  width: 60px;
-  height: 60px;
-}
-
-.project-description {
-  text-align: left;
-  padding: 8px;
-}
-
-.image-container {
-  margin: 0 auto;
-  max-width: 500px;
-  text-align: center;
-}
-
-.image-container img:hover {
-  cursor: pointer;
-}
-
-.link-container {
-  margin: 12px auto;
-  text-align: center;
-}
-
-.link-button {
-  text-decoration: none;
-  font-family: "Architects Daughter", cursive;
-  font-size: 1.1rem;
-  border-radius: 4px;
-  padding: 8px;
-  color: white;
-  background-color: rgb(240, 125, 80);
-  margin-right: 16px;
-  cursor: pointer;
-}
-
-.link-button:hover {
-  background-color: rgb(240, 105, 60);
-}
-
-.link-button:active {
-  background-color: rgb(241, 90, 41);
-}
-
-.experience-container {
-  text-align: left;
-}
 
 .form {
   padding: 8px;
